[gd_scene load_steps=6 format=1]

[ext_resource path="res://Radiko.gd" type="Script" id=1]
[ext_resource path="res://Malamikoj/Malamiko.tscn" type="PackedScene" id=2]
[ext_resource path="res://Soldato.tscn" type="PackedScene" id=3]
[ext_resource path="res://Butonoj/movo.png" type="Texture" id=4]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=5]

[node name="Radiko" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Malamiko" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 900, 300 )

[node name="Malamiko1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 700, 100 )

[node name="Malamiko2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 400, 100 )

[node name="Malamiko3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 800, 500 )

[node name="Malamiko4" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 1100, 500 )

[node name="Soldato" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 507.055, 298.34 )
transform/scale = Vector2( 0.7, 0.7 )

[node name="Kugloj" type="Node2D" parent="."]

[node name="Kanvaso" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Kontroliloj" type="Control" parent="Kanvaso"]

editor/display_folded = true
visibility/opacity = 0.4
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -134.0
margin/top = 617.0
margin/right = -94.0
margin/bottom = 577.0

[node name="Dekstre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 334, 417 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "dekstre"
visibility_mode = 0

[node name="Maldekstre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 134, 417 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "maldekstre"
visibility_mode = 0

[node name="Supre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 234, 317 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "supre"
visibility_mode = 0

[node name="Malsupre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 234, 517 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "malsupre"
visibility_mode = 0

[node name="Dekstre_Supre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 334, 317 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Dekstre_Malsupre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 334, 517 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Maldekstre_Supre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 134, 317 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Maldekstre_Malsupre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

transform/pos = Vector2( 134, 517 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Kuglujo" type="ProgressBar" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1200.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 100.0
range/min = 0.0
range/max = 7.0
range/step = 1.0
range/page = 0.0
range/value = 7.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Kuglujoj" type="Label" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1200.0
margin/top = 100.0
margin/right = 1000.0
margin/bottom = 200.0
custom_fonts/font = ExtResource( 5 )
text = "5"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Malaktivigi" type="Button" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1000.0
margin/top = 0.0
margin/right = 900.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Resxargxi" type="Button" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1000.0
margin/top = 100.0
margin/right = 900.0
margin/bottom = 200.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R"
flat = false

[connection signal="pressed" from="Kanvaso/Kontroliloj/Dekstre_Supre" to="." method="_on_Dekstre_Supre_pressed"]

[connection signal="released" from="Kanvaso/Kontroliloj/Dekstre_Supre" to="." method="_on_Dekstre_Supre_released"]

[connection signal="pressed" from="Kanvaso/Kontroliloj/Dekstre_Malsupre" to="." method="_on_Dekstre_Malsupre_pressed"]

[connection signal="released" from="Kanvaso/Kontroliloj/Dekstre_Malsupre" to="." method="_on_Dekstre_Malsupre_released"]

[connection signal="pressed" from="Kanvaso/Kontroliloj/Maldekstre_Supre" to="." method="_on_Maldekstre_Supre_pressed"]

[connection signal="released" from="Kanvaso/Kontroliloj/Maldekstre_Supre" to="." method="_on_Maldekstre_Supre_released"]

[connection signal="pressed" from="Kanvaso/Kontroliloj/Maldekstre_Malsupre" to="." method="_on_Maldekstre_Malsupre_pressed"]

[connection signal="released" from="Kanvaso/Kontroliloj/Maldekstre_Malsupre" to="." method="_on_Maldekstre_Malsupre_released"]

[connection signal="toggled" from="Kanvaso/Malaktivigi" to="." method="_on_Malaktivigi_toggled"]

[connection signal="pressed" from="Kanvaso/Resxargxi" to="." method="_on_Resxargxi_pressed"]


